--- a/index.html
+++ b/index.html
@@ -565,11 +565,14 @@
                     </div>
                     
                     <div class="social-links">
-                        <a href="#" class="social-link">
+                        <a href="https://www.linkedin.com/in/mdshahabrarzayaan/" class="social-link">
                             <i class="fab fa-linkedin"></i>
                         </a>
-                        <a href="#" class="social-link">
+                        <a href="https://github.com/abrarzayaan" class="social-link">
                             <i class="fab fa-github"></i>
+                        </a>
+                        <a href="https://www.facebook.com/profile.php?id=61585773252672" class="social-link">
+                            <i class="fa-brands fa-facebook"></i>
                         </a>
                         <a href="#" class="social-link">
                             <i class="fab fa-stack-overflow"></i>
